# Frankeinstein-Tech-Recruiter-PRO

./: .gitignore  Makefile  README.md  docker-compose.override.yml  docker-compose.yml
backend/: Dockerfile  docker-compose.override.yml.old  pyproject.toml
backend/api/: main.py
backend/cv/: scorer.py
backend/etl/: main.py
backend/scripts/: check-firestore.py
frontend/: Dockerfile  package.json
frontend/src/: App.jsx  auth.js
infra/firebase/: indexes.json  makefile.old  security.rules
prompts/gemini/: 01-fusao-sequencial.md
